# laxberg-timhedl-antonlen-project

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: specifications.md  style-guides.md  workflow.md
showcase/medival_book_obj/: Untitled.mtl
src/: '  builder.rs  cli.rs  error.rs  file_handler.rs  file_parser.rs  main.rs  octree.rs  renderer.rs  shader.wgsl  state.rs  vecmath.rs  voxelizer.rs  worldgen.rs
test-resources/file-parsing/: invalid-fileformat.txt
