[package]
name = "Voxin"
version = "0.1.0"
edition = "2024"

[dependencies]
softbuffer = "0.4.8"
vecmath = "1.0.0"
winit = "0.30.13"
rayon = "1.11.0"
rand = "0.10.0"
wgpu = "29.0.1"
env_logger = "0.11"
pollster = "0.4"
bytemuck = "1.22.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
